added web.config and process.json

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "joi": "^13.4.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "morgan": "^1.9.0",
     "mssql": "^4.1.0",
     "sentiment": "^5.0.0",
